# nuclear-eye

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.perceive  HOWTO.md  README.md  cameras.toml  deploy_rpi.sh  docker-compose.yml  face_embedding_service.py  gesture_pose_mapping.py  main.py  model-manifest.yml  nuclear-camera.service  perceive_service.py  pyproject.toml  test_gesture_pose_mapping.py
.github/workflows/: ci.yml
config/: security.customer.toml  security.docker.toml  security.local.toml  security.local.toml.bak
deploy/: com.nuclear.cam-server.plist  install.sh  migrate-face-db-tenant.sh  nuclear-eye-actuator-agent.service  nuclear-eye-alarm-grader.service  nuclear-eye-camera.service  nuclear-eye-decision-agent.service  nuclear-eye-face-db.service  nuclear-eye-house-runtime.service  nuclear-eye-house-sentinel.service  nuclear-eye-iphone-sensor.service  nuclear-eye-safety-aurelie.service  nuclear-eye-safetyagent.service  nuclear-eye-vision-agent.service
docs/: ARCHITECTURE.md  EMILE_INTEGRATION.md  SECURITY_ONLY_README.md  SENTINEL_GHOST_ARCHITECTURE.md
migrations/: face_db_001.README.md  face_db_001.sql
models/: yolov8n.onnx
scripts/: SCRIPTS.md  backup_config.sh  cam_server.py  camera_server.py  check-model-manifest.sh  demo_affect_triad.sh  demo_full_pipeline.sh  demo_safety_aurelie.sh  deploy.sh  deploy_b450.sh  download_models.sh  export-fastvlm-onnx.sh  health_check_all.sh  health_check_deploy.sh  install_home_rpi.sh  restore_config.sh  smoke_topology.sh  start_local.sh  stop_local.sh  validate_b450_source.sh
src/: audit.rs  consul.rs  face_db_auth.rs  face_embedding.rs  face_store.rs  fastvlm_onnx.py  guard.rs  house.rs  lib.rs  memory.rs  riviere.rs  runtime.rs  types.rs  wrapper_guard.rs
src/scenes/: scene_verifier.rs
tests/: integration_decision.rs
