[package]
name = "nuclear-eye"
version = "0.1.0"
edition = "2021"

[features]
default = []
# RTSP capture in vision_agent (requires system OpenCV; see vision_agent.rs).
opencv = ["dep:opencv"]
# os/56 P1-4 Pass 2: Postgres-backed face_db with pgcrypto column encryption,
# tenant_id + RLS. Activates the `face_store::PostgresFaceStore` impl. When
# disabled the binary still compiles and falls back to the legacy SQLite
# backend on `cfg.app.face_db_path`.
face_db_pg = ["dep:sqlx"]

[lib]
name = "nuclear_eye"
path = "src/lib.rs"

[[bin]]
name = "camera_server"
path = "src/bin/camera_server.rs"

[[bin]]
name = "vision_agent"
path = "src/bin/vision_agent.rs"

[[bin]]
name = "alarm_grader_agent"
path = "src/bin/alarm_grader_agent.rs"

[[bin]]
name = "safetyagent"
path = "src/bin/safetyagent.rs"

[[bin]]
name = "face_db"
path = "src/bin/face_db.rs"

[[bin]]
name = "decision_agent"
path = "src/bin/decision_agent.rs"

[[bin]]
name = "iphone_sensor_agent"
path = "src/bin/iphone_sensor_agent.rs"

[[bin]]
name = "safety_aurelie_agent"
path = "src/bin/safety_aurelie_agent.rs"

[[bin]]
name = "house-runtime"
path = "src/bin/house_runtime.rs"

[[bin]]
name = "house-sentinel"
path = "src/bin/house_sentinel.rs"

[[bin]]
name = "actuator_agent"
path = "src/bin/actuator_agent.rs"

[dependencies]
nuclear-sdk = { path = "../nuclear-sdk/crates/nuclear-sdk", default-features = false, features = ["fortress", "penny", "consul", "chain"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
nuclear-consul = { path = "../nuclear-consul" }
nuclear-wrapper-core = { path = "../nuclear-wrapper/core" }
nuclear-voice-client = { path = "../nuclear-platform/fortress/crates/nuclear-voice-client" }
axum = { version = "0.7", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
opencv = { version = "0.93", optional = true }
# os/56 P1-4: constant-time bearer-token comparison for face_db_auth.
subtle = "2"
# os/56 P1-4 Pass 2 (gated by `face_db_pg` feature): Postgres backend for the
# pgcrypto-encrypted biometric store. sqlx is already in the workspace tree
# transitively via nuclear-wrapper-core, so this is dep-graph-cheap.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "macros", "time"], optional = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
