[project]
name = "nuclear-camera"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "opencv-python-headless>=4.8",
    "httpx>=0.27",
    "pillow>=10.0",
    "requests>=2.31",
    "toml>=0.10",
]

[project.optional-dependencies]
# FER ONNX path in perceive_service.py (EfficientViT); CUDA wheels are environment-specific
perceive-fer = ["onnxruntime>=1.17.0"]
